@@ -151,6 +151,7 @@ class User {
 		'markbotedits',
 		'minoredit',
 		'move',
+		'movepage',
 		'move-rootuserpages',
 		'move-subpages',
 		'nominornewtalk',
